Data binding implemented in photo_matcher_fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,15 @@ apply plugin: 'dagger.hilt.android.plugin'
 android {
     compileSdkVersion 29
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+    buildFeatures{
+        dataBinding true
     }
+    
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
+
 
     defaultConfig {
         applicationId "com.grandefirano.spaceforlove"
