--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,9 @@ android {
 
     buildFeatures{
         dataBinding true
+        viewBinding true
     }
-    
+
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_8
             targetCompatibility JavaVersion.VERSION_1_8
@@ -97,6 +98,14 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+
+
+    //Material Design
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
+
+    //Card Stack View
+    implementation "com.yuyakaido.android:card-stack-view:2.3.4"
+
 
 
 
