--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: 'dagger.hilt.android.plugin'
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 29
 
@@ -106,7 +108,8 @@ dependencies {
     //Card Stack View
     implementation "com.yuyakaido.android:card-stack-view:2.3.4"
 
-
+    //Firebase
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
 
 
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-alpha05"
