--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,10 @@ dependencies {
     //Firebase
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
 
+    //Facebook Login
+    implementation 'com.facebook.android:facebook-login:5.15.0'
+
+
 
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-alpha05"
 
